dnl AC_PREREQ(2.52)
AC_INIT(CView, 0.1, http://azuwis.github.com/)
AC_CONFIG_SRCDIR(src/cview.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(src/config.h)

dnl AC_PROG_CPP
AC_PROG_CC
AM_PROG_CC_C_O

PKG_CHECK_MODULES(DEPS, gthread-2.0 gio-2.0 >= 2.17.2 gtk+-2.0 gtkimageview >= 1.3)

GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext domain name])

AC_OUTPUT([
Makefile
src/Makefile
])
